--- a/app/src/main/res/layout/activity_choose_goal.xml
+++ b/app/src/main/res/layout/activity_choose_goal.xml
@@ -7,21 +7,27 @@
     tools:context="de.uni_stuttgart.projektinf.tmt.activities.ChooseGoalActivity">
 
     <LinearLayout
-        android:layout_width="368dp"
-        android:layout_height="495dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:orientation="vertical"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="8dp">
+        tools:layout_constraintTop_creator="1"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintBottom_creator="1"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:id="@+id/editText2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="0.5"
+            android:layout_weight="0.1"
             android:ems="10"
             android:inputType="textPersonName"
             android:text="Please choose the goal:"
-            android:textSize="30sp" />
+            android:textSize="32sp" />
 
         <Button
             android:id="@+id/button6"
@@ -29,7 +35,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="30 Seconds" />
+            android:text="30 Seconds"
+            android:textSize="32sp" />
 
         <Button
             android:id="@+id/button2"
@@ -37,7 +44,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="unlimited time" />
+            android:text="unlimited time"
+            android:textSize="32sp" />
 
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
