--- a/app/src/main/res/layout/activity_tmt.xml
+++ b/app/src/main/res/layout/activity_tmt.xml
@@ -6,4 +6,11 @@
     android:layout_height="match_parent"
     tools:context="de.uni_stuttgart.projektinf.tmt.activities.TMTActivity">
 
+    <de.uni_stuttgart.projektinf.tmt.helper_classes.TMTView
+        android:id="@+id/tmt_view"
+        android:layout_width="784dp"
+        android:layout_height="1127dp"
+        tools:layout_editor_absoluteY="8dp"
+        tools:layout_editor_absoluteX="8dp" />
+
 </android.support.constraint.ConstraintLayout>
