--- a/app/src/main/res/layout/activity_tmt.xml
+++ b/app/src/main/res/layout/activity_tmt.xml
@@ -8,9 +8,17 @@
 
     <de.uni_stuttgart.projektinf.tmt.helper_classes.TMTView
         android:id="@+id/tmt_view"
-        android:layout_width="784dp"
-        android:layout_height="1127dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         tools:layout_editor_absoluteY="8dp"
-        tools:layout_editor_absoluteX="8dp" />
+        tools:layout_editor_absoluteX="8dp"
+        tools:layout_constraintTop_creator="1"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintBottom_creator="1"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
